--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,12 @@
     <meta name="description" content="" />
     <link rel="icon" href="%svelte.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,500;0,700;1,300&display=swap"
+      as="style"
+      onload="this.rel='stylesheet'"
+    />
     %svelte.head%
   </head>
   <body>
