--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
-    <link rel="icon" href="%svelte.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="preload"
@@ -11,9 +11,9 @@
       as="style"
       onload="this.rel='stylesheet'"
     />
-    %svelte.head%
+    %sveltekit.head%
   </head>
-  <body>
-    <div>%svelte.body%</div>
+  <body data-sveltekit-preload-data="hover">
+    <div>%sveltekit.body%</div>
   </body>
 </html>
